--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
-                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <color key="backgroundColor" name="CellColor"/>
                                             <constraints>
                                                 <constraint firstItem="wy3-Ta-eQZ" firstAttribute="leading" secondItem="cnH-Uc-xai" secondAttribute="trailing" constant="10" id="0DO-fV-taT"/>
                                                 <constraint firstItem="4cM-re-RYZ" firstAttribute="leading" secondItem="eqf-R9-T7z" secondAttribute="leading" constant="15" id="1vK-o0-Jau"/>
@@ -1044,6 +1044,9 @@
         </namedColor>
         <namedColor name="BackgroundColor">
             <color red="0.94509803921568625" green="0.94509803921568625" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="CellColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FontColor">
             <color red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
