--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -910,7 +910,7 @@
         <!--テーマカラー-->
         <scene sceneID="6kg-La-0c2">
             <objects>
-                <viewController id="idJ-WR-CfA" sceneMemberID="viewController">
+                <viewController id="idJ-WR-CfA" customClass="ThemeViewController" customModule="RestockList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tlx-c0-vib">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -926,18 +926,27 @@
                                                 <color key="backgroundColor" name="AccentColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="idJ-WR-CfA" eventType="touchUpInside" id="AFq-py-nqZ"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLN-DM-oce">
                                                 <rect key="frame" x="138" y="0.0" width="138" height="387"/>
                                                 <color key="backgroundColor" name="AccentColor1"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="idJ-WR-CfA" eventType="touchUpInside" id="N1t-mS-zGR"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BvK-O9-4S4">
                                                 <rect key="frame" x="276" y="0.0" width="138" height="387"/>
                                                 <color key="backgroundColor" name="AccentColor2"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="idJ-WR-CfA" eventType="touchUpInside" id="vgo-Dy-TjO"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -949,18 +958,27 @@
                                                 <color key="backgroundColor" name="AccentColor3"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="idJ-WR-CfA" eventType="touchUpInside" id="s32-sa-qac"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJX-IO-0jU">
                                                 <rect key="frame" x="138" y="0.0" width="138" height="387"/>
                                                 <color key="backgroundColor" name="AccentColor4"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="idJ-WR-CfA" eventType="touchUpInside" id="ePJ-xx-t0F"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tAX-om-1tu">
                                                 <rect key="frame" x="276" y="0.0" width="138" height="387"/>
                                                 <color key="backgroundColor" name="AccentColor5"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                <connections>
+                                                    <action selector="buttonTapped:" destination="idJ-WR-CfA" eventType="touchUpInside" id="SxP-Gp-1vt"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
